- Added 'daysToShow' config option to optionally only display a limited number of days in a week. (thanks jura khrapunov)
- Made change that prevents dragged events fro being resized when the event has resizing disabled and overlapping is switched off. (Issue 70)


1.2.1 
- Added public method 'getData' that returns the value of a named config option.
- Added public method 'clear' that clears all calendar events from the calendar.
- Added eventDrag callback
- Added support for 24 hour timeslot display as an alternative to AM / PM 12 hour day. (thanks dozebox)
- Added eventAfterRender callback
- Added support for weeks starting on any day of the week (thanks Bramus!)
- Added better overlapping event support with the ability to have staggered or parallel layout of overlapping events. (thanks Roderik)
- Hovering over overlapping events brings them into focus (thanks Roderik)
- Added methods for formatting dates and times using the calendar config or by passing in date / time formats.
- Modified logic for 'scrollToTime' to scroll to the time of the reference date of the week.



**Thanks to everyone who logged issues and made suggestions in this release. 


2009-06-19 - 1.2 
- Added better layout support for overlapping of events
- Added ability to supply formatters for date and time
- Added improved demo with creation / editing of events using jquery ui.
- Added option to only display hours defined in the 'businessHours' config option.
- Migrated code base to extend jquery-ui widget.
- Improved inline method documentation.
- Added 'readonly' config option to flag the entire calendar as readonly, preventing creation, dragging, dropping and resizing of events.
- Added ability to configure day, month names for better i18n support
- Fixed bug with IE7 resizing once an event gets to 2 timeslots or smaller

 
2009-06-08 - 1.1.3
- Removed console.log that was causing issues in IE.
- Fixed an issue with nav buttons in certain environments


2009-05-21 - 1.1.2